refactor: menu service에서 converter로 역할 분리